[gd_scene load_steps=4 format=3 uid="uid://b0ehc2lb0ucx7"]

[ext_resource type="Script" uid="uid://c8h4lq0u0dfnb" path="res://entities/base_car/base_car.gd" id="1_c8bcc"]
[ext_resource type="Texture2D" uid="uid://dr8tb8nc5cop5" path="res://entities/base_car/base_car.webp" id="2_esqs1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5ret"]
size = Vector2(135.38463, 69.23078)

[node name="Car" type="Area2D"]
scale = Vector2(0.65, 0.65)
script = ExtResource("1_c8bcc")
tint = Color(0.07651048, 0.26337737, 0.48668522, 1)

[node name="CarNode" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="CarNode"]
offset_left = -67.15
offset_top = -32.24
offset_right = 136.85
offset_bottom = 65.759995
scale = Vector2(0.65, 0.65)
color = Color(0.07651048, 0.26337737, 0.48668522, 1)

[node name="ColorRect2" type="ColorRect" parent="CarNode/ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 96.99997
offset_right = 57.0
offset_bottom = 100.99997
color = Color(0.07651048, 0.26337737, 0.48668522, 1)

[node name="ColorRect3" type="ColorRect" parent="CarNode/ColorRect"]
layout_mode = 0
offset_left = 145.0
offset_top = 97.0
offset_right = 197.0
offset_bottom = 101.0
color = Color(0.07651048, 0.26337737, 0.48668522, 1)

[node name="ColorRect4" type="ColorRect" parent="CarNode/ColorRect"]
layout_mode = 0
offset_left = 143.0
offset_top = -3.0
offset_right = 198.0
offset_bottom = 2.0
color = Color(0.07651048, 0.26337737, 0.48668522, 1)

[node name="ColorRect5" type="ColorRect" parent="CarNode/ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_top = -3.0
offset_right = 57.0
offset_bottom = 1.0
color = Color(0.07651048, 0.26337737, 0.48668522, 1)

[node name="Sprite2D" type="Sprite2D" parent="CarNode"]
position = Vector2(0, 2.9343828e-06)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_esqs1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.9343828e-06, -0.76923084)
shape = SubResource("RectangleShape2D_j5ret")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
